--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ code/Hello World/.idea/
 code/Multiple File Structure/.idea/
 code/MilesToKM/.idea/
 code/MilesToKMRefactored/.idea/
+code/cs_2_grade_calculator/.idea/
